Find models other local AI apps downloaded, and add them in place (#467)
